# machine-learning-diabetes

./: .gitignore  README.md  classificacao.ipynb  pyproject.toml
