[tool.poetry]
name = "venv"
version = "0.1.0"
description = ""
authors = ["ledsouza <leandro.souza.159@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
plotly = "^5.22.0"
nbformat = "^5.10.4"
ipykernel = "^6.29.4"
matplotlib = "^3.8.4"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
